stages/stage2/set2-ingress/k8s/networkpolicies/apps-allow-booking-to-notification.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-booking-to-notification
  namespace: apollo-airlines-apps
spec:
  podSelector:
    matchLabels:
      app: notification
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: booking
      ports:
        - protocol: TCP
          port: 8084
